@@ -32,7 +32,7 @@ public final class InsertAttribute extends NodeCopy {
 
   @Override
   public void merge(final UpdatePrimitive p) {
-    c.add(((NodeCopy) p).c.getFirst());
+    insert.add(((NodeCopy) p).insert.get(0));
   }
 
   @Override
