@@ -31,16 +31,11 @@ public final class InsertBefore extends NodeCopy {
     final Data d = n.data;
     final int pre = n.pre;
     d.insert(pre, d.parent(pre, Nod.kind(node.type)), md);
-    // no text merging allowed here, as this target can still be deleted or
-    // replaced (see primitive order).
-    // if text is merged, the second text node is also
-    // replaced or deleted
-    //mergeTexts(d, pre + md.meta.size - 1, pre + md.meta.size);
   }
 
   @Override
   public void merge(final UpdatePrimitive p) {
-    c.add(((NodeCopy) p).c.getFirst());
+    insert.add(((NodeCopy) p).insert.get(0));
   }
 
   @Override
